--- a/_posts/postgraduate/CSS/2017-06-10-Center.md
+++ b/_posts/postgraduate/CSS/2017-06-10-Center.md
@@ -2,7 +2,7 @@
 layout: original
 title: "CSS居中的完整教程[翻译]"
 date: 2017-06-10 09:00:00 +0800 
-categories: 研究生涯
+categories: rwd
 tag: CSS
 ---
 * content
