--- a/_posts/postgraduate/CSS/2017-07-15-Flex.md
+++ b/_posts/postgraduate/CSS/2017-07-15-Flex.md
@@ -2,7 +2,7 @@
 layout: original
 title: "Flexbox的完全教程[翻译]"
 date: 2017-07-15 09:00:00 +0800 
-categories: 研究生涯
+categories: rwd
 tag: CSS
 ---
 * content
