--- a/_posts/skill/summary/2017-10-22-JS-Tips.md
+++ b/_posts/skill/summary/2017-10-22-JS-Tips.md
@@ -2,7 +2,7 @@
 layout: post
 title: "JavaScript tips"
 date: 2017-10-22 09:00:00 +0800 
-categories: 研究生涯
+categories: rwd
 tag: JavaScript
 ---
 * content
