--- a/_posts/rwd/CSS/2017-06-10-Center.md
+++ b/_posts/rwd/CSS/2017-06-10-Center.md
@@ -4,6 +4,7 @@ title: "CSS居中的完整教程[翻译]"
 date: 2017-06-10 09:00:00 +0800 
 categories: rwd
 tag: CSS
+permalink: /posts/rwd/CSS居中的完整教程[翻译]
 ---
 * content
 {:toc}
