--- a/_posts/rwd/CSS/2017-07-15-Flex.md
+++ b/_posts/rwd/CSS/2017-07-15-Flex.md
@@ -4,6 +4,7 @@ title: "Flexbox的完全教程[翻译]"
 date: 2017-07-15 09:00:00 +0800 
 categories: rwd
 tag: CSS
+permalink: /posts/rwd/Flexbox的完全教程
 ---
 * content
 {:toc}
