--- a/_posts/rwd/CSS/2017-06-11-Layout.md
+++ b/_posts/rwd/CSS/2017-06-11-Layout.md
@@ -4,6 +4,7 @@ title: "CSS的布局方式"
 date: 2017-06-11 09:00:00 +0800 
 categories: rwd
 tag: CSS
+permalink: /posts/rwd/CSS的布局方式
 ---
 * content
 {:toc}
