--- a/_posts/rwd/CSS/2017-07-23-BFC.md
+++ b/_posts/rwd/CSS/2017-07-23-BFC.md
@@ -4,6 +4,7 @@ title: "CSS中的BFC规则"
 date: 2017-07-23 09:00:00 +0800 
 categories: rwd
 tag: CSS
+permalink: /posts/rwd/CSS中的BFC规则
 ---
 * content
 {:toc}
