--- a/_posts/2017-12-30-WSG4中了解图像文件格式的笔记.md
+++ b/_posts/2017-12-30-WSG4中了解图像文件格式的笔记.md
@@ -4,8 +4,8 @@ title:  "WSG4中了解图像文件格式的笔记"
 date:   2017-12-30 
 categories: rwd
 image:
-  teaser: article1.png
-  feature: article1.png
+  teaser: html2.jpg
+  feature: html2.jpg
 ---
 这里是之前我们小组翻译的WG4中关于图像文件格式的内容。
 
