--- a/_posts/2017-12-30-WSG4中了解图像文件格式的笔记.md
+++ b/_posts/2017-12-30-WSG4中了解图像文件格式的笔记.md
@@ -7,44 +7,59 @@ image:
   teaser: html2.jpg
   feature: html2.jpg
 ---
-这里是之前我们小组翻译的WG4中关于图像文件格式的内容。
+最近很多同学在修改jekyll模板过程中，都不免会接触一些Liquid语法，所以我将一些Liquid的基础语法整理出来，希望能帮到大家。
 
 --------
 
-### 了解图像文件格式 UNDERSTANDING IMAGE FILE FORMATS
-> - [x] 主要的Web文件格式为GIF图像（英文发音为“jiff”）， JPEG (英文发音为“jaypeg”), and PNG(英文发音为“ping”) 文件。所有三种常见的Web图形格式都是所谓的位图图形，由一个由数千个微小的彩色正方形图片元素或像素组成的棋盘格组成。位图文件是手机和数码相机所熟悉的文件类型，很容易创建，编辑，调整大小，和优化的Web使用Adobe的PS图象处理软件或元素等广泛使用的工具，Corel的油漆店专业画家，或其他图片编辑程序。
-> - [x] 为了有效地通过Internet传输，几乎所有的web图形都被压缩了
-保持文件大小越小越好。大多数网站都使用GIF和JPEG图像。在这些文件类型之间进行选择在很大程度上取决于评估：
+## 基本介绍
+liquid 代码可以被分类为对象，标签和过滤代码
+### 对象
+对象表示页面中将要显示的内容，对象和变量使用双花括号表示
+### 标签
+标签创建模板的逻辑和控制流，标签使用花括号和百分号表示
+标签的使用不会产生其他的文本，即说明在页面中不显示liquid逻辑代码的条件下，我们可以分配变量，创建条件和循环。
+存在三种类型的标签，控制流标签，迭代型标签，变量赋值型标签
+Standard Filters标准过滤器
+ate -时间格式化
+1. capitalize-设置输入中的某个单词*
+1. downcase-将输入的字符串转换为小写*
+1. upcase-将输入的字符串转换为大写
+1. first-获得传入的数组的第一个元素
+1. last-获得传入的数组的最后一个元素
+1. join-用数组的分隔符连接数组中的元素
+1. sort-数组中的元素排序
+1. map-通过指定的属性过滤数组中的元素
+1. size-返回一个数组或字符串的大小
+1. escape-转义一个字符串
+1. escape_once-返回HTML的转义版本，而不会影响现有的实体转义
+1. strip_html-从字符串去除HTML
+1. strip_newlines -从字符串中去除所有换行符（\ n）的
+1. newline_to_br-用HTML标记替换每个换行符（\ n）
+1. replace-替换，例如：{{ 'foofoo' | replace:'foo','bar' }} #=> 'barbar'
+1. replace_first-替换第一个，例如： '{{barbar' | replace_first:'bar','foo' }} #=> 'foobar'
+1. remove-删除，例如：{{'foobarfoobar' | remove:'foo' }} #=> 'barbar'
+1. remove_first-删除第一个，例如：{{ 'barbar' | remove_first:'bar' }} #=> 'bar'
+1. truncate-截取字符串到第x个字符
+1. truncatewords-截取字符串到第x个词
+1. prepend-前置添加字符串，例如：{{ 'bar' | prepend:'foo' }} #=> 'foobar'
+1. append-后置追加字符串，例如：{{'foo' | append:'bar' }} #=> 'foobar'
+1. minus-减法，例如：{{ 4 | minus:2 }} #=> 2
+1. plus-加法，例如：{{'1' | plus:'1' }} #=> '11', {{ 1 | plus:1 }} #=> 2
+1. times-乘法，例如：{{ 5 | times:4 }} #=> 20
+1. divided_by-除法，例如：{{ 10 | divided_by:2 }} #=> 5
+1. split-通过正则表达式切分字符串为数组，例如：{{"a~b" | split:"~" }} #=> ['a','b']
+1. modulo-取模，例如：{{ 3 | modulo:2 }} #=> 1
 
+## 标记
+目前支持的标记的列表：
 
-> - 图像的性质(是形象的平滑色调过渡或硬边和线条图形图像摄影集)
-> - 各种文件压缩对图像质量的影响
-> - 压缩技术产生最小文件，其效率 看起来不错
-
-#### GIF
-> - [x] 图 11.5 图标字体中的基于矢量的图形，如字体“真棒”，可以扩展到任何分辨率，是一个伟大的解决方案，提供了大量的图标图形只有一个HTTP请求。
-
-> - [x] CompuServe信息服务推广了图形交换格式 (GIF)在20世纪80年代，作为一种通过数据网络传输图像有效的手段。 上世纪90年代初，万维网最初的设计者们采用了GIF。它的效率和广泛的熟悉程度。很多图片都是GIF格式， 而且几乎所有支持图形的浏览器都可以显示GIF文件。GIF文件 包含一个“无损”压缩方案，以保证文件大小为最小而无损质量。然而，GIF文件是8位图形，因此可以容纳只有256的颜色。
-
-> - [x] 图11.6 Lempel Zev Welch（LZW）GIF文件格式的图像压缩技术，在压缩简单的领域的颜色和硬边图形图形特别有效（右侧）。照片图像（左侧）在JPEG或PNG文件格式中看起来要好得多。
-
-> - [x] gif文件格式使用了一种相对基本的文件压缩形式(Lempel Zev Welch，或LZW)，它在不丢失数据或扭曲图像的情况下消除了数据存储中的低效率问题。在有大面积均匀色的图像上，lzw压缩方案在压缩图像上是最好的，如徽标和图表。在压缩多种颜色和复杂的纹理的“摄影的”图片时，效果要差很多。
-
-> - [x] 
-你可以利用LZW压缩的特性来提高其效率，从而减少你的GIF图像的大小。
-这种策略是把你的GIF图像中的颜色数量减少到最小，并去掉不需要表示的图像的颜色。
-一个GIF图像不能超过256种颜色，但可以少一些。
-在LZW压缩下，具有较少颜色的图像将更有效地压缩。
-例如，在Photoshop中创建GIF图形时，不要使用256色自动保存每个文件。
-一个简单的GIF图像在8、16或32种颜色下看起来还不错，文件大小的节省也很可观。
-为了在GIF图像中获得最大的效率，请使用最少的颜色数量，以获得最佳效果。
-
-> - [x]
-传统的（逐行扫描的）GIF图像一次从上到下下载一行像素，然后浏览器在屏幕上逐行显示图像。
-在隔行扫描的GIF文件中，图像数据被存储在一种格式中，这允许支持此功能的浏览器在下载文件时，在屏幕上构建一个全尺寸GIF图片的低分辨率版本。
-有些人发现隔行扫描的“模糊到清晰”的动画效果具有视觉吸引力，但是隔行扫描最重要的好处是当图片下载到浏览器中时，可以让用户预览整个图片。
-
-> - [x] 图 11.7 透明的背景GIF图形仅可以处理256的颜色，但是透明的GIF仍然被坚持使用因为它们在和透明的PNG-24图形比较时，显得非常小。不幸的是，在GIF图形中只有唯一一个颜色可以被指定透明，这往往导致可见的颜色边缘当GIF与其他背景颜色对比时。
-> - [x] 对较大的GIF图形来说，交错是最好的。例如像素为200X100或更大的插图。交错是个糟糕的选择对小的GIF图形来说，例如导航条、按钮和图标。如果你保持传统的GIF格式（非交错），这些小图形会更快地加载到屏幕上。一般来说，交错不会显著影响平均GIF的文件的大小。
-> - [x] GIF格式允许你从颜色板查找选择透明的颜色来表现gif。你可以使用像Photoshop这样的图像编辑软件来选择一个颜色单一的调色板，让gif图形变得透明。通常的颜色
-选择透明度是图中的背景色。不幸的是，透明的属性不是选择性的;如果你使一个颜色透明，在图形中的每个像素中，颜色也会变得透明，这可能会导致意想不到的结果。
+1. assign -将某个值赋给一个变量
+1. capture-标记文本赋值给一个变量
+1. case-标准的case...when代码块
+1. comment-块标记，注释掉该块中的文本
+1. cycle-通常在循环中使用的值之间交替，如颜色或DOM类。
+1. for-for循环
+1. if-标准的if/else代码块
+1. include -包含另外一个模版
+1. raw-暂时停用标签处理以避免出现语法冲突
+1. unless-if的反义词
