--- a/_posts/2017-12-30-关于HTML速查笔记.md
+++ b/_posts/2017-12-30-关于HTML速查笔记.md
@@ -1,196 +1,79 @@
 ---
 layout: article
-title:  "关于HTML速查笔记"
-date:   2017-12-31 
-categories: notes
+title:  "meta标签知识点"
+date:   2017-12-25 
+categories: rwd
 image:
-  teaser: article4.jpg
-  feature: article4.jpg
+  teaser: html_note.jpg
+  feature: html_note.jpg
 ---
-这里介绍了一些关于HTML速查笔记，方便快速使用。
+介绍了一些关于meta标签知识点。
 
 --------
 
-## HTML 基本文档
-
-```HTML
-<!DOCTYPE html>
-<html>
-<head>
-<title>文档标题</title>
-</head>
-<body>
-可见文本...
-</body>
-</html>
+## 基础知识点
+- width - viewport的宽度
+- height - viewport的高度
+- initial-scale - 初始的缩放比例
+- minimum-scale - 允许用户缩放到的最小比例
+- maximum-scale - 允许用户缩放到的最大比例
+- user-scalable - 用户是否可以手动缩放
+<!-- more -->
+## viewport 语法介绍
+ 
+```
+<!-- html document -->
+     <meta name="viewport"
+         content="
+             height = [pixel_value | device-height] ,
+             width = [pixel_value | device-width ] ,
+             initial-scale = float_value ,
+             minimum-scale = float_value ,
+             maximum-scale = float_value ,
+             user-scalable = [yes | no] ,
+             target-densitydpi = [dpi_value | device-dpi | high-dpi | medium-dpi | low-dpi]
+         "
+     />
 ```
 
---------
+## width
+控制 viewport 的大小，可以指定的一个值或者特殊的值，如 device-width 为设备的宽度（单位为缩放为 100% 时的 CSS 的像素）。
+## height
+和 width 相对应，指定高度。
+## target-densitydpi
+一个屏幕像素密度是由屏幕分辨率决定的，通常定义为每英寸点的数量（dpi）。Android支持三种屏幕像素密度：低像素密度，中像素密度，高像素密度。一个低像素密度的屏幕每英寸上的像素点更少，而一个高像素密度的屏幕每英寸上的像素点更多。Android Browser和WebView默认屏幕为中像素密度。
+## 下面是 target-densitydpi 属性的 取值范围
+- device-dpi –使用设备原本的 dpi 作为目标 dp。 不会发生默认缩放。
+- high-dpi – 使用hdpi 作为目标 dpi。 中等像素密度和低像素密度设备相应缩小。
 
-## 基本标签（Basic Tags）
+medium-dpi – 使用mdpi作为目标 dpi。 高像素密度设备相应放大， 像素密度设备相应缩小。 这是默认的target density. 
+low-dpi -使用mdpi作为目标 dpi。中等像素密度和高像素密度设备相应放大。
 
-```HTML
-<h1>最大的标题</h1>
-<h2> . . . </h2>
-<h3> . . . </h3>
-<h4> . . . </h4>
-<h5> . . . </h5>
-<h6>最小的标题</h6>
-
-<p>这是一个段落。</p>
-<br> （换行）
-<hr> （水平线）
-<!-- 这是注释 -->
+指定一个具体的dpi 值作为target dpi. 这个值的范围必须在70–400之间。
 ```
-
---------
-
-## 文本格式化（Formatting）
-
-```HTML
-<b>粗体文本</b>
-<code>计算机代码</code>
-<em>强调文本</em>
-<i>斜体文本</i>
-<kbd>键盘输入</kbd>
-<pre>预格式化文本</pre>
-<small>更小的文本</small>
-<strong>重要的文本</strong>
-<abbr> （缩写）
-
-<address> （联系信息）
-<bdo> （文字方向）
-<blockquote> （从另一个源引用的部分）
-<cite> （工作的名称）
-<del> （删除的文本）
-<ins> （插入的文本）
-<sub> （下标文本）
-<sup> （上标文本）
+- <meta name="viewport" content="target-densitydpi=device-dpi" />
+- <meta name="viewport" content="target-densitydpi=high-dpi" />
+- <meta name="viewport" content="target-densitydpi=medium-dpi" />
+-  <meta name="viewport" content="target-densitydpi=low-dpi" />
+- <meta name="viewport" content="target-densitydpi=200" />
 ```
+## initial-scale
+初始缩放。即页面初始缩放程度。这是一个浮点值，是页面大小的一个乘数。例如，如果你设置初始缩放为“1.0”，那么，web页面在展现的时候就会以target density分辨率的1:1来展现。如果你设置为“2.0”，那么这个页面就会放大为2倍。
+## maximum-scale
+最大缩放。即允许的最大缩放程度。这也是一个浮点值，用以指出页面大小与屏幕大小相比的最大乘数。例如，如果你将这个值设置为“2.0”，那么这个页面与target size相比，最多能放大2倍。
 
---------
+## user-scalable
+用户调整缩放。即用户是否能改变页面缩放程度。如果设置为yes则是允许用户对其进行改变，反之为no。默认值是yes。如果你将其设置为no，那么minimum-scale 和 maximum-scale都将被忽略，因为根本不可能缩放。
 
-## 链接（Links）
+所有的缩放值都必须在0.01–10的范围之内。
+## For example
+(设置屏幕宽度为设备宽度，禁止用户手动调整缩放)
 
-```HTML
-普通的链接：<a href="http://www.example.com/">链接文本</a>
-图像链接： <a href="http://www.example.com/"><img src="URL" alt="替换文本"></a>
-邮件链接： <a href="mailto:webmaster@example.com">发送e-mail</a>
-书签：
-<a id="tips">提示部分</a>
-<a href="#tips">跳到提示部分</a>
 ```
-
---------
-
-## 图片（Images）
-
-```HTML
-<img src="URL" alt="替换文本" height="42" width="42">
+<meta name="viewport" content="width=device-width,user-scalable=no" />
 ```
+(设置屏幕密度为高频，中频，低频自动缩放，禁止用户手动调整缩放)
 
---------
-
-## 样式/区块（Styles/Sections）
-
-```HTML
-<style type="text/css">
-h1 {color:red;}
-p {color:blue;}
-</style>
-<div>文档中的块级元素</div>
-<span>文档中的内联元素</span>
 ```
-
---------
-
-## 无序列表
-
-```HTML
-<ul>
-    <li>项目</li>
-    <li>项目</li>
-</ul>
-```
-
---------
-
-## 有序列表
-
-```HTML
-<ol>
-    <li>第一项</li>
-    <li>第二项</li>
-</ol>
-```
-
---------
-
-## 定义列表
-
-```HTML
-<dl>
-    <dt>项目 1</dt>
-        <dd>描述项目 1</dd>
-    <dt>项目 2</dt>
-        <dd>描述项目 2</dd>
-</dl>
-```
-
---------
-
-## 表格（Tables）
-
-```HTML
-<table border="1">
-    <tr>
-        <th>表格标题</th>
-        <th>表格标题</th>
-    </tr>
-    <tr>
-        <td>表格数据</td>
-        <td>表格数据</td>
-    </tr>
-</table>
-```
-
---------
-
-## 框架（Iframe）
-
-```HTML
-<iframe src="demo_iframe.htm"></iframe>
-```
-
---------
-
-## 表单（Forms）
-
-```HTML
-<form action="demo_form.php" method="post/get">
-<input type="text" name="email" size="40" maxlength="50">
-<input type="password">
-<input type="checkbox" checked="checked">
-<input type="radio" checked="checked">
-<input type="submit" value="Send">
-<input type="reset">
-<input type="hidden">
-<select>
-<option>苹果</option>
-<option selected="selected">香蕉</option>
-<option>樱桃</option>
-</select>
-<textarea name="comment" rows="60" cols="20"></textarea>
-
-</form>
-```
-
---------
-
-## 实体（Entities）
-
-```HTML
-&lt; 等同于 <
-&gt; 等同于 >
-&#169; 等同于 ©
+<meta name="viewport" content="width=device-width,target-densitydpi=high-dpi,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 ```
