--- a/_posts/2018-01-01-WSG4-05笔记.md
+++ b/_posts/2018-01-01-WSG4-05笔记.md
@@ -1,41 +1,61 @@
 ---
 layout: article
-title:  "WSG4-05笔记"
+title:  "WSG4第十五周笔记"
 date:   2018-01-01
 categories: posts rwd
 image:
-  teaser: html1.jpg
-  feature: html1.jpg
+  teaser: html_note.jpg
+  feature: html_note.jpg
 ---
 ---
 这是一篇WSG4-05笔记  
 
 --------
-# WSG4-05笔记
-1.  通常，位于页面body内的区域使用分区标签（div）或文本级范围（标签<span>）来进行功能分割。例如，绝大多数Web页面都有页眉、页脚、内容和导航区域，它们全部使用可以被寻址和使用CSS进行可视样式化处理的已命名的通用==div==标签来指定。
+# 总结散播渠道
+ Facebook:
+  > -  当前流行的社交媒体。
+  > -  视频内容活动的主要组成组成成份。
+  > -  Facebook是另一个主要的短片视频的传递渠道。Facebook不是专门用于视频的主要目标站点。
+  
+  vimeo：
+  > - Vimeo是YouTube上操作和观看在线视频的主要替代品。虽然Vimeo是比YouTube小得多的公司，但Vimeo却热衷于在视频制作行业中遵循高质量的视频演示服务。
+  > - Vimeo是一个非常小众的在线视频服务和分销渠道，Vimeo是一个非常不起眼的在线视频服务商和分销途径，主要是因为它属于有偿服务，在它的视频内容中并不会出现广告或者是在视频内容周围放出广告。
+  > - Vimeo能够对影片进行密码保护，使其成为与客户分享草稿版本的理想手段，而不会将草稿暴露给更大的网络视频观众。使用Vimeo Pro服务，您还可以保留一些视频，以便按需付费观看或购买。
+  > - 虽然Vimeo的观众人数相当多，但与YouTube的巨大的全球观众相比却微不足道。
+  
+  YouTube
+  > - YouTube是一个庞大的、免费的、广告商支持的网站，这也是YouTube作为发行媒介的最大缺点。
+  > - 默认情况下，YouTube不会在高质量的环境下显示你精心制作的视频。是的，有知识的观众可以轻松地选择更高质量的设置，但大多数用户不知道能够设置，也不知道如何设置。
+  > - 对于企业对企业(B2B)通信来说，YouTube的分销渠道也很复杂，因为许多公司和大型机构都将YouTube内容从其内部网络中屏蔽。
 
-2.  网页标记的语义方法是高效语义编码的核心概念，在HTML代码片中，代表第一级标题的语义标记为==h1==,表示强调的语义标记为==strong==。
+---
 
-3.  理想Web页面优化后有明确的编辑内容重心。 下列页面元素按重要性进行排序：   
-第一  页面标题,  
-第二  页面顶部的主要标题  
-第三  页面前几段内容    
-第四  链接到其他页面的文字  
-第五  页面上所有相关图形的替代文字  
-第六  HTML文件名以及网站目录的名字   
+ 
+# 视频制作
+## 为轻量级视频制作准备装备
+  > - 摄像机
+  > - > - Lavalier麦克风（简称：“lav mics”)是一种小型的麦克风，你会在电视上看到接受采访，舞台上演讲等人别在衬衫或者领子上.
+  > - > - Shotgun麦克风是定向的，它们的灵敏度沿着麦克风主体的长轴向前递增直至最大。
+  > - 三脚架
+  > - 麦克风 
+  > - 灯光
+ 
+## 研究
+ > - 为了进行一次好的采访，你需要与你的主题进行至少一次研究，这样你就能理解视频的要点和必要的故事或解释，并了解如何构建一个简短的视频来传达核心信息。网络电视新闻的平均时间是2分23秒。如果你计划好，你可以在60秒内覆盖很多地方。
+ > - 试着将采访安排在你熟悉的会议室或其他用小房间临时转换成工作室的空间里进行。
+ > - 带一个小型的录音机或摄像机和耳机去参加研究采访，会让你大开眼界。
+ 
+## 请求允许 
+> -  如果你在一个传媒企业部门, 你就会知道任何组织政策下的电影主题都是在书面许可的情况下拍摄的。在你的电影中，你往往需要得到你所在组织之外的任何人的签名许可。
 
-4.==CMS优点==的关键在于将内容与表示代码分离, ==WordPress和Drupal==是流行的内容管理系统, 内容管理系统的主要功能之一是编辑角色形式化，并为内容创建和发布创建一个有组织的工作流
+##  设置
+ > - 最好的情况是有两个机组人员：一个问问题，而另一个监控摄像机和音频。这样，你会有一个清晰的视野，只需要求你的受访者看采访者，并进行交谈。如果你必须自己做所有的事情，就坐在镜头的一边，足够靠近监控视频，但稍微远离摄像机线。让受访者看着你，而不是镜头。
+ > - 把相机放在三脚架上，尽可能少地移动它。拍摄总是从一个较宽的视野开始，让你有足够的空间在屏幕的下三分之一（lower-third）区域放置一个介绍，同时避免截断演讲者下巴。
 
-5.一个==合乎逻辑==且==命名统一==的网站组织结构，可以让用户成功预测所寻找内容位置，如果用户被一个既不符合逻辑又不可预料的结构或者描述网站特征是经常使用的不同的模棱两可的术语所误导，那么用户将在浏览并试图理解网站所提供信息时产生挫败感
+##  采访
+ > - 拍摄花絮b-roll可以说明说话者所说的内容。比如用拍摄花絮（b-roll）来说明受访者在说什么。通常你想要避免一个“发言者的特写镜头（talking-head）”的视频，除了采访对象，什么都没有。你会用拍摄花絮（b-roll）来说明受访者的主题，并偶尔回到“发言者的特写镜头（talking-head）”，提醒观众是谁在说话。
+ > - 安排最少20到30分钟的时间，让你的采访主题得到最好的材料。轻松的对话风格是面试的理想选择，有助于让受访者放松。
 
-6。唯一已命名的页面元素能进行完全的程序控制及完全的样表式控制，除非页面元素有自己的名字，否则不能使用CSS和JavaSscript处理。, 唯一已命名的页面分区允许你对特定的页面区域和内容块更轻松地应用可视化样式，功能更强大。, 唯一已命名的页面会给未来留下更多的选择，这是因为新的Web内容显示设备和样式表类型都在改进，如果页面和内容都包含在一致的、系统命名的页面分区中，网站的转变会更容易。未来要将网站更改为全新的内容管理体系更容易。
-
-7.理想Web页面优化后有明确的编辑内容重心。在页面中采用的关键字和词来说：
-<br>第一：页面标题
-<br>第二：页面顶部的主要标题
-<br>第三：页面前几段内容
-<br>第四：链接到其它页面的文字
-<br>第五：页面上所有相关图形的替代文字
-<br>第六：HTML文件名以及网站目录的名字
-
-8.
+## 拍摄技巧
+ > - 新手视频摄影师往往低估了在编辑过程中视频的灵活性。如果你费心去安装相机和三脚架，一定要拍至少20秒的视频（30秒会更好），尤其是像交通或人这样运动的主体。较长时间的镜头会给你以后更多的编辑选择。
+ > - 虽然在线视频很少超过五分钟，但这并不意味着你只需要5分钟的拍摄花絮材料。对于经验丰富的视频摄影师来说，以10:1的比例在最终剪辑版(不包括采访片段)中拍摄原始视频的情况并不少见。
