--- a/_posts/2018-01-02-WSG4-11笔记.md
+++ b/_posts/2018-01-02-WSG4-11笔记.md
@@ -4,29 +4,245 @@ title:  "WSG4-11笔记"
 date:   2018-01-02
 categories: posts rwd
 image:
-  teaser: html2.jpg
-  feature: html2.jpg
+  teaser: html_note.jpg
+  feature: html_note.jpg
 ---
-# WSG4-11笔记
-1.单靠 css 代码在网页上的使用，可加配有阴影丶边缘丶阴影丶悬停和点击状态等等效果。 → CSS 图形, 使用线条丶多边形丶点丶曲线和填充效果的数学描述来创建图像，像 Adobe Illustrator (.ai) 文件。 → 矢量图, 一种简便方法，把数十甚至数百个矢量符号和图标，一次以非常紧凑的形式加载至网站中。 → 图标字体, 以开放格式的 xml 文件类型保存的一种矢量图，直接用于网页上。 → 可伸缩矢量图形 SVG, 是由像素 (pixels，也就是图片元素) 为基本单元所组成的细粒网格。 → 位图／点阵图 或称 光栅图
+---
+这是一篇关于flexbox的文章
+--------
+弹性盒布局(Flexbox Layout)旨在为容器(container)内的项目(item)的布局、对齐和空间分配提供一个更为便捷的方式，即便它们的尺寸是未知的或可变(弹性)的。
 
-2.在响应式web设计中，@media查询标签有决定屏幕宽度, 决定显示的分辨率, 决定分辨率与显示的物理大小之间的区别的作用。
+它的主要思想是，让容器可以改变子元素(项目)的宽度和长度，从而充分地填充空间。一个弹性容器通过扩展子元素可以有效地填满自由空间，或者收缩它们以防止溢出。
+更重要的是，相对于常规布局(垂直方向的block布局和水平方向的inline布局)来说，弹性布局是方向无关的。虽然它们都表现不错，但是在大型和复杂项目中还是缺乏弹性(尤其是改变方向、重设大小、伸展、收缩等问题)。
 
-3.WSG3及WSG4书裡提到，将复杂的矢量图形转换为图像可能会有svg格式的问题 。矢量图形可以被扩展成多个分辨率的位图jpeg或 pngs，每个尺寸都有很好的质量。, 项目矢量图形也可以用于打印。
+> Note: 弹性盒布局最适合应用组件或者小型布局，而[网格布局](https://css-tricks.com/snippets/css/complete-guide-grid/)(Grid)则是为大型布局设计的。
 
-4.当你投资于插图时，矢量图作品是特别有吸引力的，因为你可以在众多不同的媒体上使用它：网络丶APP应用丶电子书丶和印刷。, 反讽刺的是，像复杂的矢量插图有可能因其复杂程度，储存为 SVG 图形时，不会节省任何带宽。, 复杂矢量图因复杂而浪费带宽的话，将复杂矢量图作品转换为 jpeg 文档，以适应 1倍和2倍 (1× and 2×) 及(1× and 2×) 及示屏幕，是好方法。, 矢量图很少有位图（如照片）有深度或复杂度。通常只是形状的简略描述，所以文档小，下载快。, 矢量图像通常是简单和图解形式的，像图（graphs）丶数据图（charts）和图解（diagrams）。
+<!-- TOC -->
 
-5.渐进式JPEG图像比标准的JPEG文件往往需要更长的时间来逐步加载到页面上。, JPEG压缩使用了一种复杂的数学技术，称为离散余弦变换，以产生图形压缩的滑动比例。
+- [Basics & Terminology](#basics--terminology)
+- [Properties](#properties)
+    - [Properties for the Parent](#properties-for-the-parent)
+        - [display](#display)
+        - [flex-flow](#flex-flow)
+        - [justify-content](#justify-content)
+        - [align-items](#align-items)
+        - [align-content](#align-content)
+    - [Properties for the Children](#properties-for-the-children)
+        - [flex](#flex)
+        - [order](#order)
+- [Examples](#examples)
 
-6.JPEG图形在压缩和在现代显示屏幕和打印使用方面都有很好的效果, 在JPEG格式工作时，最好只在原始文件的副本上工作
+<!-- /TOC -->
 
-7.虽然将复杂的矢量图形转换为图像可能会有问题 svg格式，矢量图形是一项优秀的投资，因为: 1 .工作浏览器中的svg支持将继续改进。2.矢量图形可以被扩展成多个分辨率的位图jpeg或 pngs,每个尺寸都有很好的质量。这在交付的方案中很有用基于屏幕分辨率的页面图形，在这里创建1x和2x 为每一种显示屏幕优化插图的版本。3.项目矢量图形也可以用于打印。
-jpeg是最广泛用于复杂彩色插图和照片的文件格式。在一般的jpeg图形中,压缩和生成优秀的图形是有效的结果显示在现代显示屏和印刷使用。在新的视网膜上或2x显示适当大小的jpeg照片或插图很容易与最好的版画竞争。
 
-8.html有内置的回调功能，可以让网页在不同的环境下工作。其中一个是< img >标记的alt属性。提供一个替代的文本描述任何你放置的图片页面。, 无法看到你图片的用户将会看到你使用的文本alt属性
+## Basics & Terminology
 
-9.GIF文件是8位图形，可以容纳有256的颜色。
+因为弹性盒是一整个模块而不是一个单一的属性，所以包含一系列的属性。其中一部分设置在容器上(父元素，也叫做flex container)，另外的设置在子元素上(叫做flex-items)。
 
-10.三个RGB原色的最大亮度会在屏幕上产生白光。, 计算机显示屏通过发射光线穿透包含红绿蓝荧光粉的屏幕产生彩色。
+下面的这张图解释了弹性布局的主要思想。
 
-11.对于CSS中指定的背景和核心页面框架图形，解决各种屏幕分辨率的解决方案很简单：在 CSS中使用断点（breakpoint），您可以指定适合于每个屏幕宽度范围的位图图形的小、中、大版本。
+![Flexbox]({{ '/styles/images/css/flexbox.png' | prepend: site.baseurl }})
+
+一般，子元素(items)要么按照主轴(main axis, from main-start to main-end)排列，要么按照交叉轴(cross axis, from cross-start to cross-end)排列。
+
++ **main axis** - flex container的主轴是flex items排列的首要轴线。需要注意的是，它们并不一定是水平的。它由`flex-direction`确定。
++  **main size** - A flex item's width or height, whichever is in the main dimension, is the item's main size.
++ **cross axis** - 对应main axis垂直方向就是cross axis，方向取决于main axis的方向。
++ **cross size** - The width or height of a flex item, whichever is in the cross dimension, is the item's cross size.
+
+---
+
+## Properties
+
+> 译者注：有些属性作用在flex-container上，有些作用在flex items上。
+
+### Properties for the Parent
+
+![flex-container]({{ '/styles/images/css/flex-container.svg' | prepend: site.baseurl }})
+
+#### display
+
+这个属性定义一个弹性容器(flex container)；给定值确定是inline或是block。它为所有子元素提供一个弹性上下文(flex context)。
+
+```css
+.container {
+  display: flex; /* or inline-flex */
+}
+```
+
+> Note: CSS columns have no effect on a flex container.
+
+#### flex-flow
+
+flex-flow是属性flex-direction和flex-wrap的简写方式，这两者一起确定flex container的main axis和cross axis。默认值为: `row nowrap`。
+
+
+```
+flex-flow: <‘flex-direction’> || <‘flex-wrap’>
+```
+
+flex-direction属性
+
+![flex-direction]({{ '/styles/images/css/flex-direction2.svg' | prepend: site.baseurl }})
+
+建立main-axis，结果是确定了flex items在flex container的方向。弹性盒是一个(除了换行)单方向的布局概念。我们可以认为它要么在水平行上进行布局，要么在水平列上进行布局。
+
+```css
+.container {
+  flex-direction: row | row-reverse | column | column-reverse;
+}
+```
+
++ row (default): 从左至右并排显示
++ row-reverse: 从右至左并排显示
++ column: 从上到下纵向叠放
++ column-reverse: 和column相反
+
+
+flex-wrap属性
+
+![flex-wrap]({{ '/styles/images/css/flex-wrap.svg' | prepend: site.baseurl }})
+
+默认情况下，flex items会尽量在一行排列。你可是使用这个属性保证它们可以换行。
+
+```css
+.container{
+  flex-wrap: nowrap | wrap | wrap-reverse;
+}
+```
+
++ nowrap (default): 所有flex items在一行
++ wrap: 允许换行，从上往下
++ warp-reverse: 和wrap相反，从下往上
+
+#### justify-content
+
+![justify-content]({{ '/styles/images/css/justify-content.svg' | prepend: site.baseurl }})
+
+这个属性定义了沿main axis的对齐方式。它会帮助分配多余的自由空间，无论一行中的flex items是非弹性(译注: 尺寸固定的)的，还是弹性但达到了最大尺寸。如果flex items溢出了一行，它同样对于对齐它们发挥着效力。
+
+```css
+.container {
+  justify-content: flex-start | flex-end | center | space-between | space-around;
+}
+```
+
++ flex-start (default) : items沿着起始线堆积
++ flex-end : items沿着终点线堆积
++ center : items在一行内居中对齐
++ space-between : items均匀分布在一行。第一个item在起始线，最后一个item在终点线
++ space-around : items均匀分布在一行，items之间有相等的空间分隔。注意的是，视觉上这些空间并不相等，因为所有的items在两边有相等的空间。第一个item相对于container有一个单元的空间，但是相对于下一个item却又两个单元的空间，因为下一个item也将自己两边的空间叠加上去了。
+
+#### align-items
+
+![align-items]({{ '/styles/images/css/align-items.svg' | prepend: site.baseurl }})
+
+这个属性定义了flex items如何沿着cross axis布局的默认行为。可以把它认为是cross-axis的justify-content。
+
+```css
+.container {
+  align-items: flex-start | flex-end | center | baseline | stretch;
+}
+```
+
++ flex-start : items放置在cross-start行的margin边界
++ flex-end : items放置在corss-end行的margina边界
++ center : items在cross-axis的居中位置
++ baseline : items沿着它们的baselines对齐
++ stretch (default) : 伸展以填充整个容器(min-width/max-width仍起作用)
+
+#### align-content
+
+![align-content]({{ '/styles/images/css/align-content.svg' | prepend: site.baseurl }})
+
+在cross-axis有多余的空间的时候，这个属性用来对齐容器的行(line)(译注: 指的是一行一行的flex items)。类似于justify-content在main-axis处对齐单个items。
+
+> Note: 当flex items只占据一行时，这个属性没有作用
+
+```css
+.container {
+  align-content: flex-start | flex-end | center | space-between | space-around | stretch;
+}
+```
+
++ flex-start : 行沿着container的开始堆积
++ flex-end : 行沿着container的结尾堆积
++ center : 行沿着container的中心堆积
++ space-between : 行平均分配。第一行在container的开始位置，最后一行在结尾位置
++ space-around : 行平均分配，行中间有固定空间
++ stretch (default) : 行拉伸以占领整个空间
+
+### Properties for the Children
+
+> 译注: 子元素的属性是相对于单个item来说的，此处有删节
+
+![flex-items]({{ '/styles/images/css/flex-items.svg' | prepend: site.baseurl }})
+
+#### flex
+
+flex属性是flex-grow、flex-shrink和flex-basis组合的简写。第二个和第三个参数(就是flex-shrink 和flex-basis)是可选的。默认为: 0 1 auto。
+
+```css
+.item {
+  flex: none | [ <'flex-grow'> <'flex-shrink'>? || <'flex-basis'> ]
+}
+```
+
+> 建议使用简写方式而不是为每个属性单独设置参数。
+
+flex-grow
+
+这个熟悉提供给一个item生长(grow)的能力。它接受一个无单位的值作为比例。它决定item在flex container所占据的有效空间大小。
+
+如果所有的items的flex-grow属性都设置为1，则容器内剩余的空间会均等分配给所有子元素。如果其中有一个子元素的值设置为2，则会比其他元素多占据两倍的空间。
+
+```css
+.item {
+  flex-grow: <number>; /* default 0 */
+}
+```
+
+flex-shrink
+
+这个属性确定一个flex item收缩的能力。
+
+```css
+.item {
+  flex-shrink: <number>; /* default 1 */
+}
+```
+
+负值是无效的。
+
+flex-basis
+
+这个属性定义剩余空间被分配前一个元素的默认尺寸。`auto`关键词的意思是: 请查看我的width和height属性。`content`关键字的意思是: 尺寸基于item的内容。
+
+```css
+.item {
+  flex-basis: <length> | auto; /* default auto */
+}
+```
+
+#### order
+
+![order-2]({{ '/styles/images/css/order-2.svg' | prepend: site.baseurl }})
+
+> 译注: 图片中的数字指代的是items的序号，很index属性的值相似
+
+默认情况下，flex items按照资源顺序排列。然而，order属性可以控制他们出现在flex container的顺序。
+
+```css
+.item {
+  order: <integer>;
+}
+```
+
+---
+
+## Examples
+
+> 译注: 对原文提供的examples有修改
+
+<p data-height="265" data-theme-id="light" data-slug-hash="LLvNyY" data-default-tab="html,result" data-user="maoxiake" data-embed-version="2" data-pen-title="a flex example" class="codepen">See the Pen <a href="https://codepen.io/maoxiake/pen/LLvNyY/">a flex example</a> by maoxiaoke (<a href="https://codepen.io/maoxiake">@maoxiake</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
