--- a/_posts/2017-12-30-Liquid语法.md
+++ b/_posts/2017-12-30-Liquid语法.md
@@ -4,8 +4,8 @@ title:  "Liquid"
 date:   2017-12-30 
 categories: rwd
 image:
-  teaser: html2.jpg
-  feature: html2.jpg
+  teaser: html_note.jpg
+  feature: html_note.jpg
 ---
 最近很多同学在修改jekyll模板过程中，都不免会接触一些Liquid语法，所以我将一些Liquid的基础语法整理出来，希望能帮到大家。
 
