--- a/_posts/2018-01-03-RWD笔记.md
+++ b/_posts/2018-01-03-RWD笔记.md
@@ -4,35 +4,192 @@ title:  "RWD笔记"
 date:   2018-01-03
 categories: posts rwd
 image:
-  teaser: html3.jpg
-  feature: html3.jpg
+  teaser: html_post.jpg
+  feature: html_post.jpg
 ---
-# RWD笔记
-1.CSS3提供了很多新的选择符，有
-<br>•属性选择符
-<br>•字符串匹配属性选择符（根据属性的部分内容）
-<br>•结构化伪类（基于元素之间的位置关系）
-<br>选择没有内容（包含注释而不包含空格的元素，也是空的） → :empty, 表示“取反” → :not, 属性选择符，以……结尾 → $=, 属性选择符，以……开头 → ^=, 选择匹配列表中奇数个 → :nth-child(odd), CSS3 属性选择符一例 → img[alt="sausages"], 属性选择符，以使用“空格分隔的” → ~=, 选择的第一行文本目标根据视口大小不同而不同， → :first-line, 属性选择符，包含…… → *=, 从第三项开始，每两项选择一项 → :nth-child(2n+3), 选择匹配列表中最后一项 → :last-child, 选择匹配列表中第一项 → :first-child
+---
+最近再看`<<CSS解密>>`，是由`W3C CSS`工作组专家，设计`CSS`语言得委员之一，`Lea Verou` -- 是一位漂亮、得体得女士，所写。主要讲述了`CSS3`新版本得一些特性，对网页得设计难题，有难得一见得解决方法。特将一些重点勾勒如下。
 
-2.盒阴影添加了关键字以產生内阴影（可选） → inset, 阴影尺寸 或 阴影偏移（可选可省略），文字阴影特效缩写值的第4个值 → spread, CSS滤镜 → filter, 盒阴影容许你在元素的内部或者外部创建盒状的阴影效果 → box-shadow, 用来分隔阴影特性的符号，使其会按照从底部到顶部（从最后一个到第一个）的顺序被添加 → 逗号, 背景大小关键词：保持图片比例，拓展至覆盖整个元素。 → cover, 用来叠加不同阴影特性的符号 → 空白, 背景大小关键词：让图片保持其原生大小 → auto, 背景大小关键词：保持图片比例，拓展图片让其最长边保持在元素内部。 → contain, 模糊距离（可选可省略），文字阴影特效缩写值的第3个值 → blur, 背景径向渐变 → radial-gradient, 背景线性渐变 → linear-gradient, 重复渐变背景（径向） → repeating-radial-gradient, 文字阴影特效，是最被广泛支持的CSS3特性之一。 → text-shadow
+另外，所强调的一点是：[CSS tricks](https://css-tricks.com/)是一个相当棒的网站，提供了很多`CSS`的处理和难题解决方案。
+--------
+## 有关文字的一些难题
 
-3.在下列CSS3的动画属性语法中:规定动画被播放的次数。默认是 1。 → animation-iteration-count, 规定动画完成一个周期所花费的秒或毫秒。默认是 0。 → animation-duration, 因为默认原则是动画内外互不干涉，背景会变成透明。我们可以使用animation-fill-mode覆盖这种行为。 → animation-fill-mode, 用于控制动画的播放和暂停，这个属性可以被设置为running和paused来运行或者暂停动画。 → animation-play-state, 动画关键帧 → @keyframes, 规定动画何时开始 → animation-delay, 规定动画名称 → animation-name
+### 难题一： 断字
 
-4.HTML5表单中的标签及属性:属性，表单域中对占位符文本 → placeholder, 元素，搭配list属性使用，可以在用户开始在输入框中输入值的时候，显示一组备选值。 → datalist, 属性，可表明该项为必填项。如果表单提交的时候，该必填项没有任何信息，浏览器会给出警示信息。 → required, 属性，range、color、button和hidden类型的输入元素不能使用，因为这几种输入类型几乎都有默认值。 → required, 属性，可以让表单在加载完成时即有一个表单域被默认选中，以方便用户输入。 → autofocus, 属性，提供自动补全功能来辅助用户输入。 → autocomplete, 标签，将表单内容的一部分打包，生成一组相关表单的字段。 → fieldset, 标签，为 fieldset 元素定义标题。 → legend, 标签，用于搜集用户信息 → input
+指的是有些语言得单词很长，可以使用连字符`(&shy;)`从而将长单词分割。`CSS3`为这种方法引入了一个新属性：`hyphens`。接受`none`、`manual`、`auto`三个值。`none`会禁用这种效果，`manual`需要手工插入。
 
-5.Flexbox有4个关键特性：方向丶对齐丶次序和弹性（或者叫“伸缩性” flexiness）:对齐（在主轴main axis上） → justify-content, 弹性项 或 伸缩项 → flex-item, 弹性，传给flex的最后一个值 → flex-basis, 弹性，在空间不够的情况下，当前伸缩项相对于其他伸缩项可以收缩的量。 → flex-shrink, 次序 → order, 方向 → flex-direction, 对齐（在交叉轴cross axis上） → align-items, 弹性，三个属性（伸展、收缩、基准）合体的简写属性 → flex, 弹性，传给flex的第一个值 → flex-grow
+所以，通常情况下，只要这短短一行。
 
-6.CSS3的高级属性十分适合响应式设计，很多情况下，我们可以用它来替代图片。这样既省时，又能增加代码的可维护性和灵活度，还能让页面更“轻”。这些优势即便是在固定宽度的桌面设计中也很有用，在响应式设计中则更加重要，使用CSS可以在不同视口中轻松创造出不同的酷炫效果。阴影尺寸 或 阴影偏移（可选可省略），文字阴影特效缩写值的第4个值 → spread, 背景线性渐变 → linear-gradient, 背景大小关键词：保持图片比例，拓展至覆盖整个元素。 → cover, 模糊距离（可选可省略），文字阴影特效缩写值的第3个值 → blur, 用来分隔阴影特性的符号，使其会按照从底部到顶部（从最后一个到第一个）的顺序被添加 → 逗号, 重复渐变背景（径向） → repeating-radial-gradient, 文字阴影特效，是最被广泛支持的CSS3特性之一。 → text-shadow, 盒阴影容许你在元素的内部或者外部创建盒状的阴影效果 → box-shadow, 背景大小关键词：保持图片比例，拓展图片让其最长边保持在元素内部。 → contain, 盒阴影添加了关键字以產生内阴影（可选） → inset, CSS滤镜 → filter, 背景径向渐变 → radial-gradient, 用来叠加不同阴影特性的符号 → 空白, 背景大小关键词：让图片保持其原生大小 → auto
+```css
+hyphens: auto;
+```
 
-7.虽然两个英文单词发音相似，但CSS变形（transformation，包括2D变形和3D变形）和CSS过渡（transition）完全不同。
+> 更多参见：[https://css-tricks.com/almanac/properties/h/hyphenate/](https://css-tricks.com/almanac/properties/h/hyphenate/)
 
-可用的CSS3变形有两种：2D和3D。2D变形的实现更广泛，浏览器支持更好，写起来也更简单。沿X和Y轴对元素进行斜切（单位为度） → skew, 允许你以矩阵变形来控制变形效果 → matrix, 可以修改变形原点，在CSS里，默认的变形原点（浏览器中作为变形中心的点）是在正中心，这和SVG默认的左上角（或者0 0）是不同的。 → transform-origin属性, 用来缩放元素（放大或缩小） → scale, 按照一定角度旋转元素（单位为度） → rotate, 可以修改变形原点，在CSS里，默认的变形原点（浏览器中作为变形中心的点）是在正中心，这和SVG默认的正中心（或者50% 50%）是相同的。 → 此句有误, 在屏幕上移动元素（可以使用像素或者百分比，第一个值是X轴上偏移的距离，第二个是Y轴上偏移的距离） → translate
+可是，中文不需要断字符的呀。
 
-8.HTML5新增了很多输入类型，其中一个作用就是可以在不引入JavaScript代码的情况下限制用户输入的数据。
+### 难题二： 插入换行
 
-这些新的输入类型最赞的一点就是在那些不支持新特性的浏览器中，它们会被降级显示为一个标准的文本输入框。支持该特性的浏览器中生成一个颜色选择器 → type="color", 支持它的浏览器会期望用户的输入匹配电子邮箱的格式 → type="email", 支持该特性的浏览器期望输入一个数字 → type="number", 支持该特性的表单域期望输入一个电话号码 → type="tel", 支持该特性的浏览器期望输入统一资源定位符 → type="url", 普通文本输入的表现基本一样，仅在个别浏览器中渲染得有点细微差别 → type="search"
+比如我们写简历的时候，我们当然希望`姓名：`和自己的名字`Xiaoke Mao`放在一行了。但我们一般都是这样构建的。
 
-9.大多数网站的结构都很相似，包含页头、页脚、侧边栏、导航条，等等。作为网页编写者，我们会给相应的div元素起个好理解的名字（比如class="Header"）。可是，单纯从代码来看，任何用户代理（浏览器、屏幕阅读器、搜索引擎爬虫，等等）都不能确定每个div元素中包含的是什么内容。用户辅助技术也无法区分不同的div。HTML5为此引入了新的语义元素。
+```html
+<dl>
+  <dt>Name:</dt>
+  <dd>xiaoke Mao</dd>
+  <dt>Email:</dt>
+  <dd>maoxiaoke@outlook.com</dd>
+  <dd>thebigyellowbee@qq.com</dd>
+  <dt>Location:</dt>
+  <dd>NanKing</dd>
+</dl>
+```
 
-除了结构化和分组元素，HTML5还修订了一些以前作为行内元素使用的标签。修订之后，HTML5规范称它们为“文本级语义标签”
-<footer>元素 → 结构化和分组元素，可用于页脚或章正文的末尾部分。, <figure>和<figcaption>元素 → 结构化和分组元素，可用于包含注解、图示、照片、代码，等等。, <b>元素 → 文本级元素，用于加粗或引人注意。, <section>元素 → 结构化和分组元素，定义一个通用的区块, <em>元素 → 文本级元素，表示内容中需要强调的部分。, <nav>元素 → 结构化和分组元素，用于包装主导航链接。, <header>元素 → 结构化和分组元素，可用于引介区或“报头”。, <detail>和<summary>元素 → 结构化和分组元素，用于添加一个“展开”/“收起”部件。, <address>元素 → 结构化和分组元素，用于标记联系人信息。, <main>元素 → 结构化和分组元素，声明主内容区, <aside>元素 → 结构化和分组元素，用于包装侧边栏、广告和导航元素。, <i>元素 → 文本级元素，用于斜体或标记出罕用的名字, <article>元素 → 结构化和分组元素，用于包含一个独立的内容块。
+不过，`<dt>`和`<dd>`都是块级元素。所以所有的名和值都会占据一行。我们可以用`display: inline`将它们变成行内元素。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/Lzp3b33s/3/embedded/html,css,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+看上面的`css`代码，我们解决问题的思路是怎样的呢？
+
+1. 我们引入了一个`Unicode`字符来代表换行符，在`CSS`中，写作`"\000A"`或`"\A"`，用来做`::after`的内容，放在每个`<dd>`元素的尾部(也就是`</dd>`元素的前面)。但光有这是无效的，因为默认情况下，换行符会和其他空白符进行合并，但是我们想要保留这个换行符。
+2. 所以，我们使用到`white-space: pre`。
+3. 为了增强健壮性，我们假设我有多个邮箱(我确实拥有多个邮箱)的情况，单独在`<dd>`元素后面加换行符好像不太够，那我们在每个`<dt>`元素的前面插入换行怎样？欸。不错，但是第一行会出现一行空白。
+4. 我们再次换个方向思考，如果`<dd>`后面跟着一个`<dt>`元素，我们就在`<dt>`的前面插入换行符，这就是`dd + dt::before{}`所表达的意思。
+5. 为了更美观，我们在每个`<dd>`元素之间插入逗号，为了去除逗号前面的一个空格，我们使用`margin-left`负外边距的方法来解决。
+6. 这样，就完美了。
+
+> 更多参考： [https://css-tricks.com/injecting-line-break/](https://css-tricks.com/injecting-line-break/)
+
+### 难题三： 文本行的斑马条纹
+
+`:nth-child()/:nth-of-type()`这样的伪类，我们解决了表格的*斑马条纹*。如果我们也想给文本提供这样的条纹呢，怎么解决。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/pxrwka2h/3/embedded/html,css,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+---
+
+## 结构和布局
+
+### 难题一： 垂直居中
+
+`CSS`中对元素进行**水平居中**要简单很多：如果它是一个行内元素，就对它的父元素应用`text-align:center`；如果它是一个块级元素，就对它自身应用`margin:auto`。
+
+垂直居中较为麻烦：
+
+#### 基于绝对定位的解决方案
+
+这是一种早期的垂直居中方法，要求元素*具有固定的宽度和高度*。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/6mf6emfj/embedded/html,css,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+关键代码如下：
+
+```css
+main {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+```
+
+我们先把这个元素的左上角放置在视口(或最近、具有定位属性的祖先元素)的正中心，然后利用`translate()`基于百分比对元素进行偏移。
+
+#### 基于视口单位的解决方案
+
+`CSS3`定义了一套新的单位，称为与适口有关的长度单位。
+
++ `vw`与视口宽度有关，`1vw`表示视口宽度的`1%`
++ `vh`与视口宽度有关
+
+所以我们的代码可能是这样子：
+
+```css
+main {
+  width: 18em;
+  padding: 1em 1.5em;
+  margin: 50vh auto 0;
+  transform: translateY(-50%);
+}
+```
+
+但是，这种方法只适用于在视口中居中的场景。
+
+#### 基于Flexbox的解决方案
+
+`Flexbox`(弹性盒)是专门针对这类需求设计的。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/nk9e74vL/1/embedded/html,css,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+关键代码如下：
+
+```css
+body {
+  display: flex;
+  min-height: 100vh;
+  margin: 0;
+}
+main {
+  margin: auto;
+}
+```
+
+先给这个待居中的父元素设置`display: flex`，再给这个元素自身设置`margin: auto`。
+
+> 当我们使用flexbox时，margin: auto不仅在水平方向上将元素居中，垂直方向上也是。
+
+### 紧贴底部的页脚
+
+有了弹性盒之后，我们对这个问题也有很好的处理。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/d5zk6eLp/1/embedded/html,css,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+关键代码：
+
+```css
+body {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+main {
+  flex:1;
+}
+```
+
+这里，首先对`<body>`设置弹性盒属性，同时设置`flex-flow: column`，否则子元素会被水平排放在一行上。然后，将`<body>`元素的`min-height`设置为`100vh`，使之至少会占据整个视口的高度。接下来，我们所希望的是，页头和页脚的高度由其内部元素决定，而内容区块的高度可以自由伸展并占满所有的可用空间。而这，只要给`<main>`这个容器的`flex`属性指定一个大于`0`的值。
+
+---
+
+## 视觉效果
+
+### 毛玻璃效果
+
+毛玻璃效果经常在`Apple`公司的设计中使用。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/bufyh93b/1/embedded/html,css,result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
+核心代码在这里：
+
+```css
+main::before {
+	content: '';
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	margin: -30px;
+	z-index: -1;
+	-webkit-filter: blur(20px);
+	filter: blur(20px);
+}
+```
+
++ 首先，我们添加一个伪元素，将其绝对定位，并把所有偏移量置为`0`，这样就可以将它完整地覆盖到`<main>`元素之上
++ 为了防止毛玻璃效果覆盖在字体之上，所以设置`z-index`的值
++ 但是，对伪元素应用`blur()`滤镜，模糊效果在接近边缘处会逐渐消退，这是因为模糊效果会削减实色像素所能覆盖的范围，这个幅度正好是模糊半径的长度(`20px`)。为了补偿这种情况，我们让伪元素相对宿主元素的尺寸再向外扩大至少`20px`，由于不同浏览器对模糊算法存在的差异，所以我们使用一个更大的绝对值`-30px`
++ 但是，这样又出现了一个问题，就是有一圈模糊效果超出了容器，看上去有点问题。解决这个问题也很简单，对`<main>`元素应用`overflow:hidden`，就可以将多余的模糊区域裁切掉了。
+
+
+### 通过模糊来弱化背景
+
+我们通过模糊来把关键元素之外的一切元素都模糊掉，可以营造一种*景深*效果：当我们的实现聚焦再距离较近的物体上是，远处的背景就是虚化的。
+
+<iframe width="100%" height="300" src="//jsfiddle.net/maoxiaoke/Lmuoqtmy/1/embedded/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
