--- a/_posts/2017-12-05-信息可视化专题.md
+++ b/_posts/2017-12-05-信息可视化专题.md
@@ -55,7 +55,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510834009085');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -79,7 +79,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510831889549');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -100,7 +100,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510836504587');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -125,7 +125,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510844553918');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -151,7 +151,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510844659066');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -173,7 +173,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510844722152');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -202,7 +202,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510835878368');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                   
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
@@ -227,7 +227,7 @@ image:
 				<script type='text/javascript'>                    
 					var divElement = document.getElementById('viz1510839085241');                    
 					var vizElement = divElement.getElementsByTagName('object')[0];                    
-					vizElement.style.width='100%';vizElement.style.height='100%';                    
+					vizElement.style.width='1000px';vizElement.style.height='800px';                    
 					var scriptElement = document.createElement('script');                    
 					scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
 					vizElement.parentNode.insertBefore(scriptElement, vizElement);                
