--- a/_posts/2017-12-05-信息可视化专题.md
+++ b/_posts/2017-12-05-信息可视化专题.md
@@ -4,7 +4,7 @@ title:  "信息可视化期中专案"
 date:   2017-12-01 
 categories: infovis
 image:
-  teaser: article9.jpg
+  teaser: data_visualization_mid-term.jpg
 ---
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>全国人均GDP与粗离婚率的分析</h2>  
