--- a/_posts/2018-01-01-Tableau学习笔记.md
+++ b/_posts/2018-01-01-Tableau学习笔记.md
@@ -2,10 +2,10 @@
 layout: article
 title:  "地理编码笔记"
 date:   2018-01-01
-categories: posts rwd
+categories: posts infovis
 image:
-  teaser: html_note.jpg
-  feature: html_note.jpg
+  teaser: data_visualization_mid-term
+  feature: data_visualization_mid-term
 ---
 这是一篇有关Tableau地理编码的文章
 ---
