--- a/_posts/2017-12-05-信息可视化期中专题.md
+++ b/_posts/2017-12-05-信息可视化期中专题.md
@@ -7,18 +7,27 @@ image:
   teaser: data_visualization_mid-term.jpg
 ---
 <div style="background: #DAA520; color:white;border-radius:20px">
-    <h2>全国人均GDP与粗离婚率的分析</h2>  
+    <h2>人均GDP与粗离婚率的分析</h2>  
 </div>
 <iframe src="https://public.tableau.com/views/3_913/sheet2?:retry=yes&:embed=y&:display_count=yes/sheet4?:embed=y&:display_count=yes&publish=yes/Dashboard1?:showVizHome=no&:embed=truehttps://public.tableau.com/shared/DJPSG6CX9?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
 <div style="background: #DAA520; color:white;border-radius:20px">
-    <h2>全国文盲率与粗离婚率的分析</h2>  
+    <h2>文盲率与粗离婚率的分析</h2>  
 </div>
 <iframe src="https://public.tableau.com/views/_15803/1_1?:embed=y&:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
 <div style="background: #DAA520; color:white;border-radius:20px">
-    <h2>全国互联网普及率与粗离婚率的分析</h2>  
+    <h2>互联网普及率与粗离婚率的分析</h2>  
 </div>
 <iframe src="https://public.tableau.com/views/_15702/sheet4?:embed=y&:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>居民消费与粗离婚率的分析</h2>  
 </div>
 <iframe src="https://public.tableau.com/views/helihua/sheet6?:embed=y&:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<div style="background: #DAA520; color:white;border-radius:20px">
+    <h2>城镇失业率与粗离婚率的分析</h2>  
+</div>
+<iframe src="https://public.tableau.com/profile/.6101#!/vizhome/2_1961/1_2" width="1080px" height="900px" frameborder="0"></iframe>
+<div style="background: #DAA520; color:white;border-radius:20px">
+    <h2>工资与粗离婚率的分析</h2>  
+</div>
+<iframe src="https://public.tableau.com/profile/.4784#!/vizhome/_15796/1_1" width="1080px" height="900px" frameborder="0"></iframe>
+
