--- a/_posts/2017-12-05-信息可视化期中专题.md
+++ b/_posts/2017-12-05-信息可视化期中专题.md
@@ -6,6 +6,8 @@ categories: infovis
 image:
   teaser: data_visualization_mid-term.jpg
 ---
+分析中国各省的发展程度与粗离婚率的关系
+---
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>人均GDP与粗离婚率的分析</h2>  
 </div>
