--- a/_posts/2018-01-01-web期中作品.md
+++ b/_posts/2018-01-01-web期中作品.md
@@ -2,7 +2,7 @@ title:  "网页设计可视化期中专案"
 date:   2017-12-23
 categories: portfolio
 image:
-  teaser: data_visualization_mid-term.jpg
+  teaser: html_post.jpg
 ---
 web期中作品
 ---
