修改期末专案

--- a/_posts/2018-01-03-信息可视化期末专案.md
+++ b/_posts/2018-01-03-信息可视化期末专案.md
@@ -7,13 +7,13 @@ image:
   teaser: data_visualization.jpg
 ---
 <div style="background: #DAA520; color:white;border-radius:20px">
-    <h2>分析全国环境监测中心的分布</h2>  
+    <h2>分析全国六大地区大气污染程度与人均GDP</h2>  
 </div>
-<iframe src="https://public.tableau.com/views/1_5291/1?:embed=y&:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<iframe src="https://public.tableau.com/shared/H6DJ7M2K3?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
 ---
 
 <div style="background: #DAA520; color:white;border-radius:20px">
-    <h2>全国六大地区大气污染与GDP与环境监测中心的关系</h2>  
+    <h2>分析全国环境监测中心的分布</h2>  
 </div>
-<iframe src="https://public.tableau.com/shared/Z78QWMCCB?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
-<div>结论：结合以上图表，我们清楚看到，我国六大地区中，一般是大气污染越严重的地区则环境监测中心分布数量更多，但是环境监测中心分布数量又与地区GDP有着一定的联系，GDP越高的地区，环境监测中心分布数量也会越多，如华北地区、中南地区、华东地区对比分析，除了西南地区。</div>
+<iframe src="https://public.tableau.com/shared/X7YZQC2Z7?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<div>结论：结合以上图表，我们清楚看到，我国六大地区中，环境监测站数量比较少的华北地区和西北地区都是大气污染比较严重而人均GDP低的地区，而环境监测站数量比较多华东地区、中南地区都是人均GDP高而大气污染比较轻的地区，环境监测站的分布与地区的人均GDP、大气污染有着一定的关系。</div>
