--- a/_posts/2018-01-03-信息可视化期末专案.md
+++ b/_posts/2018-01-03-信息可视化期末专案.md
@@ -9,11 +9,11 @@ image:
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>分析全国六大地区大气污染程度与人均GDP</h2>  
 </div>
-<iframe src="https://public.tableau.com/shared/H6DJ7M2K3?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<iframe src="https://public.tableau.com/views/1_5291/GDP_3?:embed=y&:display_count=yes&publish=yes" width="1080px" height="900px" frameborder="0"></iframe>
 ---
 
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>分析全国环境监测中心的分布</h2>  
 </div>
-<iframe src="https://public.tableau.com/shared/X7YZQC2Z7?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<iframe src="https://public.tableau.com/shared/2B9B96B4S?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
 <div>结论：结合以上图表，我们清楚看到，我国六大地区中，环境监测站数量比较少的华北地区和西北地区都是大气污染比较严重而人均GDP低的地区，而环境监测站数量比较多华东地区、中南地区都是人均GDP高而大气污染比较轻的地区，环境监测站的分布与地区的人均GDP、大气污染有着一定的关系。</div>
