--- a/_posts/2018-01-03-信息可视化期末专案.md
+++ b/_posts/2018-01-03-信息可视化期末专案.md
@@ -4,7 +4,7 @@ title:  "信息可视化期末专案"
 date:   2018-01-03 
 categories: infovis
 image:
-  teaser: data_visualization.jpg
+  teaser: data_visualization_finally.jpg
 ---
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>分析全国六大地区大气污染物排放量与GDP</h2>  
