--- a/_posts/2018-01-03-信息可视化期末专案.md
+++ b/_posts/2018-01-03-信息可视化期末专案.md
@@ -15,6 +15,6 @@ image:
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>分析全国环境监测中心的分布</h2>  
 </div>
-<iframe src="https://public.tableau.com/shared/2B9B96B4S?:display_count=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<iframe src="https://public.tableau.com/views/_18564/sheet3?:embed=y&:display_count=yes&publish=yes" width="1080px" height="900px" frameborder="0"></iframe>
 <div>结论：结合以上图表，我们看出可以大气污染排放物的排放量比较高的地区如华东、中南的环境监测站数量会比较多，但是环境监测站的数量与GDP又有着一定的联系，如人均GDP高而大气污染又相对轻的地区的环境监测站数量会比较多，如华东地区和中南地区，人均GDP低而大气污染又相对严重的地区环境监测站数量会比较少，如西北地区和华北地区。</div>
 <div>数据来源:高德地图API、<a href="http://data.stats.gov.cn/">国家数据网</a></div>
