--- a/_posts/2018-01-03-信息可视化期末专案.md
+++ b/_posts/2018-01-03-信息可视化期末专案.md
@@ -9,7 +9,7 @@ image:
 <div style="background: #DAA520; color:white;border-radius:20px">
     <h2>分析全国六大地区大气污染物排放量与GDP</h2>  
 </div>
-<iframe src="https://public.tableau.com/views/1_5291/GDP_3?:embed=y&:display_count=yes&publish=yes" width="1080px" height="900px" frameborder="0"></iframe>
+<iframe src="https://public.tableau.com/views/_18608/GDP_4?:embed=y&:display_count=yes&publish=yes" width="1080px" height="900px" frameborder="0"></iframe>
 ---
 
 <div style="background: #DAA520; color:white;border-radius:20px">
