--- a/_posts/2018-01-03-信息可视化期末专案.md
+++ b/_posts/2018-01-03-信息可视化期末专案.md
@@ -6,7 +6,7 @@ categories: infovis
 image:
   teaser: data_visualization_finally.jpg
 ---
-<div style="background: #DAA520; color:white;border-radius:20px">
+<div >
     <h2>全国六大地区大气污染物排放量、GDP、环境监测站分布之间的关系</h2>  
 </div>
 <div style="background: #DAA520; color:white;border-radius:20px">
