--- a/_posts/2018-01-03-圆切片.md
+++ b/_posts/2018-01-03-圆切片.md
@@ -5,8 +5,8 @@ title:  "Tableau圆切片和垂直条形的图表规范"
 date:   2018-01-01
 categories: posts infovis
 image:
-  teaser: data_visualization_mid-term.jpg
-  feature: data_visualization_mid-term.jpg
+  teaser: Tableau_note_circlemap.jpg
+  feature: Tableau_note_circlemap.jpg
 ---
 这是一篇有关Tableau圆切片和垂直条形图表规范的文章
 ---
