--- a/_posts/2018-01-01-Tableau学习笔记.md
+++ b/_posts/2018-01-01-Tableau学习笔记.md
@@ -4,8 +4,8 @@ title:  "地理编码笔记"
 date:   2018-01-01
 categories: posts infovis
 image:
-  teaser: data_visualization_mid-term.jpg
-  feature: data_visualization_mid-term.jpg
+  teaser: tableau_note_geocoding.jpg
+  feature: tableau_note_geocoding.jpg
 ---
 这是一篇有关Tableau地理编码的文章
 ---
